# features

./: .gitignore  features.cabal  stack.yaml
data/: cs_170_large34.txt  cs_170_small34.txt
src/: Main.hs
